# Rocket-app

./: Cargo.toml  ReadMe.md  Rocket.toml  database.sqlite
devops/: systemd.service
migrations/2024-04-15-081455_create_runstaceans/: up.sql
src/: auth.rs  main.rs  models.rs  repositories.rs
