[package]
name = "rocket-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.20"
diesel = { version = "2.1.5", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.1.0"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc"
default-features = false
features = ["diesel_sqlite_pool"]
